// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldBooleanIcon > render with disabled 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="iconify iconify--bi"
    disabled=""
    height="1em"
    name="dummy"
    role="img"
    viewBox="0 0 16 16"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <path
      d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8L4.646 5.354a.5.5 0 0 1 0-.708"
      fill="currentColor"
    />
  </svg>
</DocumentFragment>
`;

exports[`FieldBooleanIcon > render with place holder 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="iconify iconify--bi"
    height="1em"
    name="dummy"
    placeholder="placeholder"
    role="img"
    viewBox="0 0 16 16"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <path
      d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8L4.646 5.354a.5.5 0 0 1 0-.708"
      fill="currentColor"
    />
  </svg>
</DocumentFragment>
`;

exports[`FieldBooleanIcon > renders inside of model context 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="iconify iconify--bi"
    height="1em"
    name="dummy"
    role="img"
    viewBox="0 0 16 16"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <path
      d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8L4.646 5.354a.5.5 0 0 1 0-.708"
      fill="currentColor"
    />
  </svg>
</DocumentFragment>
`;

exports[`FieldBooleanIcon > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
